--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "League of Legends stats. Server",
   "description": "Express endpoints requesting data from Riot Games LoL API and responding back to React frontend",
-  "repository": "",
+  "repository": "https://github.com/ant-wong/LoL-stats-server",
   "keywords": ["node", "express", "REST"]
 }
